@@ -1,5 +1,5 @@
 %define	with_python_subpackage	1 %{nil}
-%define with_perl_subpackage	0
+%define with_perl_subpackage	1
 %define	with_bzip2		1 %{nil}
 %define	with_apidocs		1 %{nil}
 %define with_internal_db	1 %{nil}
@@ -12,15 +12,16 @@
 %define	_noPayloadPrefix	1
 
 %define	__prefix	/usr
-%{expand:%%define __share %(if [ -d %{__prefix}/share/man ]; then echo /share ; else echo %%{nil} ; fi)}
+%{expand: %%define __share %(if [ -d %{__prefix}/share/man ]; then echo /share ; else echo %%{nil} ; fi)}
 
 Summary: The Red Hat package management system.
 Name: rpm
 %define version 4.0.3
 Version: %{version}
-Release: 0.78
+%{expand: %%define rpm_version %{version}}
+Release: 0.79
 Group: System Environment/Base
-Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{version}.tar.gz
+Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
 Conflicts: patch < 2.5
 %ifos linux
@@ -62,7 +63,7 @@ the package like its version, a description, etc.
 %package devel
 Summary: Development files for applications which will manipulate RPM packages.
 Group: Development/Libraries
-Requires: rpm = %{version}, popt = 1.6.3
+Requires: rpm = %{rpm_version}, popt = 1.6.3
 
 %description devel
 This package contains the RPM C library and header files.  These
@@ -78,19 +79,35 @@ will manipulate RPM packages and databases.
 %package build
 Summary: Scripts and executable programs used to build packages.
 Group: Development/Tools
-Requires: rpm = %{version}
+Requires: rpm = %{rpm_version}
 
 %description build
 This package contains scripts and executable programs that are used to
 build packages using RPM.
 
+%if %{with_python_subpackage}
+%package python
+Summary: Python bindings for apps which will manipulate RPM packages.
+Group: Development/Libraries
+Requires: rpm = %{rpm_version}
+Requires: python >= 1.5.2
+Requires: popt = 1.6.3
+
+%description python
+The rpm-python package contains a module which permits applications
+written in the Python programming language to use the interface
+supplied by RPM (RPM Package Manager) libraries.
+
+This package should be installed if you want to develop Python
+programs that will manipulate RPM packages and databases.
+%endif
+
 %if %{with_perl_subpackage}
 %package perl
 Summary: Native bindings to the RPM API for Perl.
-Version: 0.32
 Group: Development/Languages
 URL: http://www.cpan.org
-Requires: rpm = %{version}
+Requires: rpm = %{rpm_version}
 Requires: perl >= 0:5.00503
 Requires: popt = 1.6.3
 Obsoletes: perl-Perl-RPM
@@ -113,23 +130,6 @@ is not yet installed.  Error management and the export of most defined
 constants, through RPM::Error and RPM::Constants, respectively, are
 also available.
 
-%endif
-
-%if %{with_python_subpackage}
-%package python
-Summary: Python bindings for apps which will manipulate RPM packages.
-Group: Development/Libraries
-Requires: rpm = %{version}
-Requires: python >= 1.5.2
-Requires: popt = 1.6.3
-
-%description python
-The rpm-python package contains a module which permits applications
-written in the Python programming language to use the interface
-supplied by RPM (RPM Package Manager) libraries.
-
-This package should be installed if you want to develop Python
-programs that will manipulate RPM packages and databases.
 %endif
 
 %package -n popt
@@ -502,9 +502,12 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Sun Jul 22 2001 Jeff Johnson <jbj@redhat.com>
+- use %%{rpm_version} to avoid other package versions.
+
 * Sat Jul 21 2001 Jeff Johnson <jbj@redhat.com>
 - add sha1 test vectors, verify on ix86/alpha/sparc.
-- add (but disable for now) rpm-perl subpackage from Perl-RPM.
+- add rpm-perl subpackage from Perl-RPM.
 - python: parameterize with PYVER to handle 1.5 and/or 2.1 builds.
 - add build dependency on zlib-devel (#49575).
 
